<resources>
    <string name="app_name">Chatak</string>
    <string name="title_home">Home</string>
    <string name="title_dokumen">Dokumen</string>
    <string name="title_media_promosi">Media Promosi</string>
    <string name="title_souvenir">Souvenir</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="header_transaksi">GET_KATEGORI</string>
    <string name="header_bon_barang">Ringkasan</string>
    <string name="format_file">Format File</string>
    <string name="ketentuan_file">Ketentuan File</string>
    <string name="ukuran_maksimum_file">Ukuran Maksimum File</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="wishlist">Wishlist</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="title_alamat_saya">Alamat Saya</string>
    <string name="text_nama_lengkap">Nama Lengkap</string>
    <string name="text_alamat">Alamat</string>
    <string name="text_kode_pos">Kode Pos</string>
    <string name="text_no_hp">No Hp</string>
    <string name="edit_foto_profile">Edit Foto Profile</string>
    <string name="text_title">title</string>
    <string name="text_description">description</string>
    <string name="text_price">price</string>
    <string name="content_descriptionn">yeah! click me!</string>
    <string name="text_lihat_semua">Lihat Semua</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Pencarian barang</string>
    <string name="search_hint">Pencarian</string>
    <string name="allowed_input_char_name">0123456789qwertzui opasdfghjklyxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="allowed_input_char_email">0123456789qwertzuiopasdfghjklyxcvbnm@-_ABCDEFGHIJKLMNOPQRSTUVWXYZ.</string>
    <string name="allowed_input_char_phone">0123456789+</string>
    <string-array name="jml_halaman_1">
        <item>40</item>
        <item>80</item>
    </string-array>
    <string-array name="jml_halaman_2">
        <item>50 Lembar</item>
    </string-array>
    <string-array name="jml_halaman_3">
        <item>500 Lembar (1 Rim)</item>
    </string-array>
    <string-array name="jml_halaman_4">
        <item>1 pak(100 Pcs)</item>
    </string-array>
    <string name="pilih_warna">Pilih Warna</string>
    <string-array name="pilih_warna_2">
        <item>1 Warna</item>
        <item>2 Warna</item>
        <item>3 Warna</item>
    </string-array>
    <string-array name="pilih_warna_3">
        <item>1 Warna</item>
        <item>2 Warna</item>
        <item>3 Warna</item>
        <item>Full Warna</item>
    </string-array>
    <string-array name="pilih_warna_4">
        <item>Full Warna</item>
    </string-array>
    <string-array name="pilih_warna_5">
        <item>Laser Hitam</item>
    </string-array>
    <string name="jenis_kertas">Jenis Kertas</string>
    <string-array name="jenis_kertas_20">
        <item>Rapel</item>
        <item>Twin</item>
        <item>Drill</item>
    </string-array>
    <string-array name="jenis_kertas_2">
        <item>Concord</item>
        <item>Linen</item>
        <item>ArtPaper 210 Gsm</item>
        <item>ArtPaper 260 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_3">
        <item>ArtPaper 210 Gsm</item>
        <item>Manila</item>
        <item>Concord</item>
        <item>Glossy</item>
    </string-array>
    <string-array name="jenis_kertas_4">
        <item>HVS WaterMark</item>
        <item>HVS Polos</item>
    </string-array>
    <string-array name="jenis_kertas_5">
        <item>Nota Tanpa Rangkap</item>
        <item>Nota Rangkap 2</item>
        <item>Nota Rangkap 3</item>
        <item>Nota Rangkap 4</item>
    </string-array>
    <string-array name="jenis_kertas_6">
        <item>HVS 80 Gsm</item>
        <item>HVS 100 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_7">
        <item>Putih Standar 11x23cm</item>
        <item>Putih Folio 23x35cm</item>
        <item>Coklat Folio 23x35cm</item>
    </string-array>
    <string-array name="jenis_kertas_8">
        <item>Glossy</item>
    </string-array>
    <string-array name="jenis_kertas_9">
        <item>ArtPaper 260 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_10">
        <item>ArtPaper 210 Gsm</item>
        <item>ArtPaper 260 Gsm</item>
        <item>Glossy</item>
    </string-array>
    <string-array name="jenis_kertas_11">
        <item>ArtPaper 210 Gsm</item>
        <item>ArtPaper 260 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_12">
        <item>Glossy</item>
        <item>ArtPaper 210 Gsm</item>
        <item>ArtPaper 260 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_13">
        <item>ArtPaper 150 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_14">
        <item>HVS Warna</item>
    </string-array>
    <string-array name="jenis_kertas_15">
        <item>ArtPaper 150 Gsm</item>
        <item>ArtPaper 210 Gsm</item>
        <item>ArtPaper 260 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_16">
        <item>ArtPaper 120 Gsm</item>
        <item>ArtPaper 150 Gsm</item>
        <item>ArtPaper 210 Gsm</item>
    </string-array>
    <string-array name="jenis_kertas_17">
        <item>0.6 X 2.9 Cm</item>
        <item>0.8 X 3.8 Cm</item>
        <item>3 X 4 Cm</item>
        <item>1.7 X 5 Cm</item>
        <item>2.2 X 5 Cm</item>
        <item>3.1 X 4.6 Cm</item>
        <item>1.7 X 6.2 Cm</item>
        <item>3 X 3 Cm</item>
        <item>6.1 X 8 Cm</item>
        <item>Diameter 1.5 Cm</item>
        <item>Diameter 2 Cm</item>
        <item>Diameter 3.5 Cm</item>
        <item>Diameter 4 Cm</item>
    </string-array>
    <string-array name="jenis_kertas_18">
        <item>Stiker Vinil</item>
        <item>Stiker Oneway</item>
        <item>Stiker Transparan</item>
    </string-array>
    <string-array name="jenis_kertas_19">
        <item>Artpaper 120 Gsm 2 Halaman</item>
        <item>Artpaper 120 Gsm 3 Halaman</item>
        <item>Artpaper 120 Gsm 4 Halaman</item>
        <item>Artpaper 120 Gsm 6 Halaman</item>
        <item>Artpaper 120 Gsm 12 Halaman</item>
    </string-array>
    <string name="ukuran_kertas">Ukuran Kertas</string>
    <string-array name="ukuran_kertas_2">
        <item>A3</item>
    </string-array>
    <string-array name="ukuran_kertas_3">
        <item>A5 (10 Pcs)</item>
    </string-array>
    <string-array name="ukuran_kertas_4">
        <item>Folio (jadi 10 Buku), 1/2</item>
        <item>Folio (jadi 20 Buku), 1/3</item>
        <item>Folio (jadi 30 Buku), 1/4</item>
        <item>Folio (jadi 40 Buku), 1/5</item>
        <item>Folio (jadi 50 Buku)</item>
    </string-array>
    <string-array name="ukuran_kertas_5">
        <item>A4 (1 Rim)</item>
        <item>Folio (1 Rim)</item>
    </string-array>
    <string-array name="ukuran_kertas_6">
        <item>A4 (250 Pcs)</item>
        <item>Folio(250 Pcs)</item>
    </string-array>
    <string-array name="ukuran_kertas_7">
        <item>2R (4 Lembar)</item>
        <item>3R (4 Lembar)</item>
        <item>4R (4 Lembar)</item>
        <item>5R (2 Lembar)</item>
        <item>8R</item>
        <item>8RP</item>
        <item>12R</item>
        <item>12RP</item>
        <item>16R</item>
        <item>16RP</item>
        <item>20R</item>
        <item>20RP</item>
        <item>24R</item>
        <item>24RP</item>
    </string-array>
    <string-array name="ukuran_kertas_8">
        <item>B4 (150x105 Mm)</item>
        <item>B3 (124x95 Mm)</item>
        <item>B2 (124x80 Mm)</item>
    </string-array>
    <string-array name="ukuran_kertas_9">
        <item>Regular (9x5.5cm)</item>
        <item>Slim (9x5cm)</item>
    </string-array>
    <string-array name="ukuran_kertas_10">
        <item>A3</item>
        <item>A4</item>
    </string-array>
    <string-array name="ukuran_kertas_11">
        <item>A4</item>
    </string-array>
    <string-array name="ukuran_kertas_12">
        <item>A3</item>
        <item>A3+</item>
        <item>A4</item>
    </string-array>
    <string-array name="ukuran_kertas_13">
        <item>A6</item>
        <item>A5</item>
        <item>A4</item>
        <item>1/3 A4</item>
    </string-array>
    <string-array name="ukuran_kertas_14">
        <item>A6 (8 Pcs)</item>
        <item>A5 (4 Pcs)</item>
        <item>A4 (2 Pcs)</item>
        <item>1/3 A4 (6 Pcs)</item>
    </string-array>
    <string-array name="ukuran_kertas_15">
        <item>Stempel Warna</item>
        <item>Stempel Trodat</item>
        <item>Stempel Kayu</item>
    </string-array>
    <string-array name="ukuran_kertas_16">
        <item>26x38 (250 Eksemplar)</item>
        <item>31x48 (250 Eksemplar)</item>
        <item>38x53 (250 Eksemplar)</item>
        <item>44x64 (250 Eksemplar)</item>
    </string-array>
    <string-array name="ukuran_kertas_17">
        <item>20x15 Cm (250 Eksemplar)</item>
    </string-array>
    <string-array name="ukuran_kertas_18">
        <item>PoliFlex Warna Biasa</item>
        <item>PoliFlex Gold/Silver</item>
        <item>PoliFlex Fosfor</item>
    </string-array>
    <string-array name="sisi">
        <item>1 sisi</item>
        <item>2 sisi</item>
    </string-array>
    <string-array name="sisi1">
        <item>1 Sisi</item>
    </string-array>
    <string-array name="sisi2">
        <item>2 Sisi</item>
    </string-array>
    <string name="orientasi">Orientasi</string>
    <string-array name="orientasi_portrait">
        <item>Portrait</item>
    </string-array>
    <string name="pilihan_jilid">Pilihan Jilid</string>
    <string-array name="pilihan_jilid_2">
        <item>Ring Kawat</item>
        <item>Ring Plastik</item>
        <item>SoftCover</item>
    </string-array>
    <string-array name="pilihan_jilid_3">
        <item>Tanpa Jilid</item>
        <item>Hekter</item>
    </string-array>
    <string-array name="pilihan_jilid_4">
        <item>Ring Kawat</item>
        <item>Ring Plastik</item>
    </string-array>
    <string-array name="pilihan_jilid_5">
        <item>HandCover Tinta Emas</item>
        <item>HandCover Tinta Warna</item>
        <item>SoftCover</item>
    </string-array>
    <string-array name="pilihan_jilid_6">
        <item>Hekter</item>
    </string-array>
    <string-array name="pilihan_jilid_7">
        <item>Biasa</item>
        <item>Ring Kawat</item>
    </string-array>
    <string-array name="pilihan_jilid_8">
        <item>Tanpa Nomor</item>
        <item>Dengan Nomor</item>
    </string-array>
    <string name="waktu_proses">Waktu Proses</string>
    <string name="posisi_jilid">Posisi Jilid</string>
    <string-array name="posisi_jilid_2">
        <item>Sisi Atas</item>
        <item>Sisi Kiri</item>
    </string-array>
    <string-array name="sub_posisi_jilid">
        <item>1 Kanan Atas</item>
        <item>1 Kiri Atas</item>
        <item>2 Kiri</item>
    </string-array>
    <string name="jenis_laminasi">Jenis Laminasi</string>
    <string-array name="jenis_laminasi_2">
        <item>Tanpa Laminasi</item>
        <item>Laminasi Biasa</item>
    </string-array>
    <string-array name="jenis_laminasi_3">
        <item>Tanpa Laminasi</item>
        <item>Laminasi Glossy</item>
        <item>Laminasi Doff</item>
    </string-array>
    <string name="back_home">back_home</string>
    <string name="tf_virtual"><b><b>Transfer melalui Virtual Account</b></b>
        \nBank BCA, Bank BNI, dll
        \n\n <i>Lihat Keterangan</i></string>
    <string name="kartu_kredit">Kartu Kredit
    \nBayar penuh atau Cicilan 0%</string>
    <string name="kartu_debit">kartu Debit
    \nBayar Penuh</string>
    <string name="internet_banking">Internet Banking</string>
    <string name="bayar_gerai">Bayar di Gerai
    \nAlfaGroup, Indomaret</string>
    <string name="uang_elektronik">Uang Elektronik
        \nGo-Pay, LinkAja, Sakuku, Xl, Tunai
    </string>
</resources>