<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_4dp"
    android:background="@drawable/background_radius_10"
    android:elevation="@dimen/background_elevation_3dp">

    <ImageView
        android:id="@+id/h_s_product_image"
        android:layout_width="@dimen/h_s_item_layout_width"
        android:layout_height="@dimen/h_s_item_layout_hight"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_descriptionn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favicon" />

    <TextView
        android:id="@+id/h_s_product_title"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/text_title"
        android:singleLine="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/hitam_chatak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_s_product_image" />

    <TextView
        android:id="@+id/h_s_product_description"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/text_description"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_10sp"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_s_product_title" />

    <ImageView
        android:id="@+id/whislist_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/abu_chatak"
        android:onClick="ButtonOnClickWhislist"
        app:srcCompat="@drawable/ic_favorite_black_24dp" />


</android.support.constraint.ConstraintLayout>